# Komposition-eines-Musikstuecks-mittels-Neuronaler-Netze

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  model.h5  model_bach.h5  model_bach_part2.h5  model_erk.h5  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  release.yml  requirements.yml
demos/: GRU_Videospielmusik.ipynb  GetBachSongs.ipynb  LSTM_Bach.ipynb  LSTM_PinkFloyd.ipynb  LSTM_Videospielmusik.ipynb  Transformer_Bach.ipynb  Transformer_PinkFloyd.ipynb  Transformer_Pokemon.ipynb  Transformer_Videospielmusik.ipynb  flo-NN-pos-or-neg.py  generate_lstm_bach.ipynb  generate_transformer_bach.ipynb  generated_song_bach_lstm_poly.mid  generated_song_videospielmusik_gru_poly.mid  generated_song_videospielmusik_lstm_mono part 1.mid  generated_song_videospielmusik_lstm_mono.mid  generated_song_videospielmusik_lstm_poly 5.mid  generated_song_videospielmusik_lstm_poly Piano 3.mid  generated_song_videospielmusik_lstm_poly Piano 4.mid  generation.ipynb  preprocess_transformer.ipynb  preprocessing.ipynb  tmp.py  train_lstm_bach.ipynb  train_transformer_bach.ipynb  train_transformer_pokemon.ipynb  training.ipynb
demos/Glaser/: flo-NN-more-input.py  flo-NN-pos-or-neg.py  flo-NN-simple.py  flo-linear-regresion.py  preprocessing.ipynb
flask-webapp/: app.py  requirements-dev.txt  utils.py
flask-webapp/static/: abcjs.min.js  opensheetmusicdisplay.min.js  opensheetmusicdisplay.min.js.map  script.js  style.css
midi-in-html/: index.html  script.js  style.css
mukkeBude/: __init__.py  bwv10.7.mxl  bwv104.6.mxl  data.json  dataset.csv  dataset_creation.ipynb  file_dataset_bach_corpus_part2  file_dataset_bach_preludes  file_dataset_bach_preludes_midi  generate_lstm_bach.ipynb  generated_song_p0_9.mid  generated_song_p_0_1.mid  generated_song_pokemon.musicxml  generation.ipynb  load.ipynb  load_dataset.ipynb  mapping.json  mapping.py  mapping.txt  mapping_bach_corpus_part2.json  mapping_bach_preludes.json  mapping_bach_preludes_midi.json  mapping_erk.json  melodygenerator.py  original_bach.musicxml  preprocess.py  preprocess_transformer.ipynb  raw_pokemon_train_ds.txt  slow_bach.mid  slow_bach.musicxml  test.mid  train.py  train_lstm_bach.ipynb  train_transformer.ipynb  train_transformer_bach.ipynb  train_transformer_pokemon.ipynb  training.ipynb  utils.py
(+119 files in other folders)
