[tool.poetry]
name = "komposition-eines-musikstuecks-mittels-neuronaler-netze"
version = "0.1.0"
description = "Ziel der Studienarbeit ist die Komposition eines kleinen Musikstücks. Die Komposition erfolgt mittels eines Neuronalen Netzes."
authors = [
    "Florian Glaser <58706771+Floskinner@users.noreply.github.com>",
    "Florian Herkommer <35303060+Floqueboque@users.noreply.github.com>",
    "David Felder <80164220+screetox@users.noreply.github.com>"
]
readme = "README.md"
packages = [{include = "komposition_eines_musikstuecks_mittels_neuronaler_netze"}]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "<2.11"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
